[project]
name = "repl-nix-streamlinesales"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "oauthlib>=3.2.2",
    "requests>=2.32.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.1",
    "flask-uploads>=0.2.1",
    "flask-migrate>=4.0.7",
]
